--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,24 @@ h2 {
 .projects a:hover {
   text-decoration: underline;
 }
+.projects2 ul {
+  list-style: none;
+  padding: 0;
+}
+
+.projects2 li {
+  font-size: 1.2rem;
+  margin: 8px 0;
+}
+
+.projects2 a {
+  color: #dc0404;
+  text-decoration: none;
+}
+
+.projects2 a:hover {
+  text-decoration: underline;
+}
 
 .contact {
   margin-top: 20px;
