--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,17 @@ body {
   border-radius: 10px;
   text-align: left;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+  transition: transform 0.2s ease-in-out;
 }
+
+.project-card:hover {
+  transform: scale(1.05);
+}
+
 
 .project-card h3 {
   margin-bottom: 5px;
-  color: #4caf50;
+  color: #4c6daf;
 }
 
 .project-card p {
@@ -49,7 +55,7 @@ body {
   display: inline-block;
   margin-top: 10px;
   padding: 8px 12px;
-  background: #4caf50;
+  background: #2936ab;
   color: white;
   text-decoration: none;
   border-radius: 5px;
@@ -57,7 +63,7 @@ body {
 }
 
 .project-card .btn:hover {
-  background: #45a049;
+  background: #1e3659;
 }
 
 /* Blogs Section */
