--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 
 @layer base {
   body {
-    @apply bg-white dark:bg-[#0a0a0a] text-zinc-800 dark:text-zinc-200 font-sans transition-colors duration-300;
+    
+    @apply bg-[#0a0a0a] text-zinc-200 font-sans;
+
   }
 }
-
-
